--- a/setup.cfg
+++ b/setup.cfg
@@ -2,10 +2,10 @@
 universal = 1
 
 [flake8]
-max-line-length = 140
+max-line-length = 80
 exclude = tests/*,*/migrations/*,*/south_migrations/*
 
-[pytest]
+[tool:pytest]
 norecursedirs =
     .git
     .tox
