--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ sqlalchemy = "*"
 sqlparse = "*"
 tablib = "*"
 flapjack-stack = "*"
+stevedore = "*"
+"e1839a8" = {path = ".", editable = true}
 
 
 [dev-packages]
