--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,18 @@
 universal = 1
 
 [flake8]
-max-line-length = 80
-exclude = tests/*,*/migrations/*,*/south_migrations/*
+exclude =
+    .git,
+    migrations,
+    docs,
+    manage.py,
+    .venv*,
+    .tox,
+    # Built docs
+    _build,
+    dist,
+    __init__.py
+max-complexity = 12
 
 [tool:pytest]
 norecursedirs =
@@ -26,10 +36,11 @@ addopts =
     --tb=short
 
 [isort]
-force_single_line = True
-line_length = 120
+force_single_line = False
+line_length = 79
 known_first_party = recipe
 default_section = THIRDPARTY
 forced_separate = test_recipe
 not_skip = __init__.py
 skip = migrations, south_migrations
+multi_line_output = 5
