RECIPE-28 Pass tests under python 3.6

--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@
 envlist = py27,py36
 [testenv]
 deps=pytest
-commands=py.test tests --junitxml junit.xml --cov-config .coveragerc --cov src --cov-report term-missing --cov-report xml
+commands=py.test tests
