--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,23 @@
 language: python
-python: '3.5'
+python:
+  - '2.7'
+  - '3.6'
 sudo: false
-env:
-  global:
-    - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
-    - SEGFAULT_SIGNALS=all
-  matrix:
-    - TOXENV=check
-    - TOXENV=docs
-
-    - TOXENV=py27,report,codecov
-    - TOXENV=py33,report,codecov
-    - TOXENV=py34,report,codecov
-    - TOXENV=py35,report,codecov
-    - TOXENV=pypy,report,codecov
 before_install:
   - python --version
   - uname -a
   - lsb_release -a
 install:
-  - pip install tox
+  - pip install tox-travis
   - virtualenv --version
   - easy_install --version
   - pip --version
   - tox --version
 script:
-  - tox -v
+  - tox
 after_failure:
-  - more .tox/log/* | cat
-  - more .tox/*/log/* | cat
+  - cat .tox/log/*
+  - cat .tox/*/log/*
 before_cache:
   - rm -rf $HOME/.cache/pip/log
 cache:
