--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,7 @@ envlist = py27,py36
 [testenv]
 deps = -rrequirements_dev.txt
 commands = py.test tests
+[testenv:docs]
+deps = -rrequirements_dev.txt
+changedir = docs
+commands = make html
