--- a/setup.cfg
+++ b/setup.cfg
@@ -2,12 +2,14 @@
 universal = 1
 
 [flake8]
+ignore = D203,E121,E123,E124,E125,E126
 exclude =
     .git,
     migrations,
     docs,
     manage.py,
     .venv*,
+    .venv,
     .tox,
     # Built docs
     _build,
