--- a/tests/ingredients/census_references.yaml
+++ b/tests/ingredients/census_references.yaml
@@ -14,6 +14,11 @@ pop2000:
 pop2008:
     kind: Metric
     field: pop2008
+pop2008oldsters:
+    kind: Metric
+    field:
+        value: pop2008
+        condition: '@pop2000'
 popdivide:
     kind: Metric
     field: '@pop2000'
