--- a/tests/ingredients/census_complex.yaml
+++ b/tests/ingredients/census_complex.yaml
@@ -4,6 +4,15 @@ state:
     lookup:
         Vermont: "The Green Mountain State"
         Tennessee: "The Volunteer State"
+    quickfilters:
+        - name: younger
+          condition:
+              field: age
+              lt: 40
+        - name: vermontier
+          condition:
+              field: state
+              eq: Vermont
 pop2000:
     kind: Metric
     field:
@@ -11,6 +20,9 @@ pop2000:
         condition:
             field: age
             gt: 40
+pop2008:
+    kind: Metric
+    field: pop2008
 allthemath:
     kind: Metric
     field: pop2000+pop2008   - pop2000 * pop2008 /pop2000
