--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 envlist = py27,py36
 [testenv]
 deps = -rrequirements_dev.txt
-commands = py.test --tb=native  tests
+commands = py.test tests
 [testenv:docs]
 deps = -rrequirements_dev.txt
 changedir = docs
