--- a/tests/ingredients/census.yaml
+++ b/tests/ingredients/census.yaml
@@ -24,6 +24,20 @@ age_buckets:
     - label: 'teens'
       lt: 20
     buckets_default_label: 'oldsters'
+mixed_buckets:
+    kind: Dimension
+    field: age
+    buckets:
+    - label: 'northeast'
+      in: ['Vermont', 'New Hampshire']
+      field: state
+    - label: 'babies'
+      lt: 2
+    - label: 'children'
+      lt: 13
+    - label: 'teens'
+      lt: 20
+    buckets_default_label: 'oldsters'
 ttlpop:
     kind: Metric
     field: pop2000 + pop2008
