Replace quickfilter with quickselect

--- a/tests/ingredients/census_complex.yaml
+++ b/tests/ingredients/census_complex.yaml
@@ -4,7 +4,7 @@ state:
     lookup:
         Vermont: "The Green Mountain State"
         Tennessee: "The Volunteer State"
-    quickfilters:
+    quickselects:
         - name: younger
           condition:
               field: age
