--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-faker==1.0.2
+faker==1.0.8
 flapjack_stack==1.0.0
 orderedset==2.0.1
 py==1.4.32
@@ -11,3 +11,4 @@ pyyaml>=4.2b1
 sureberus==0.14.0
 dateparser==0.7.1
 attrs==19.1.0
+pyhash==0.9.3
