Refactor tests and add bucket test

--- a/tests/ingredients/scores_with_nulls.yaml
+++ b/tests/ingredients/scores_with_nulls.yaml
@@ -28,6 +28,15 @@ department_lookup_with_everything:
         ops: Operations
         null: 'can not find department'
     lookup_default: Unknown
+department_buckets:
+    kind: Dimension
+    field: department
+    buckets:
+    - label: 'Sales'
+      eq: 'sales'
+    - label: 'Operations'
+      eq: 'ops'
+    buckets_default_label: 'Other'
 department_default:
     kind: Dimension
     field:
