--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,15 +1,12 @@
 -r requirements.txt
+-r docs/requirements.txt
 appdirs==1.4.0
 bumpversion==0.5.3
 flake8==3.4.1
 packaging==16.8
-pre-commit==1.2.0
 pytest==3.0.6
 pytest-cov==2.4.0
-Sphinx==1.8.5
-sphinx_rtd_theme==0.4.3
 twine==1.10.0
 autopep8==1.3.1
 mock==2.0.0
-sphinx-autobuild==0.7.1
 -e .
