--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-faker==2.0.3
+faker==2.0.4
 orderedset==2.0.1
-py==1.4.32
-six==1.10.0
+six==1.13.0
 SQLAlchemy>=1.2.2
 sqlparse==0.3.0
-stevedore==1.27.1
-tablib==0.12.1
-pyyaml>=4.2b1
+stevedore==1.31.0
+tablib==0.14.0
+pyyaml==5.1.2
 sureberus==0.14.0
-dateparser==0.7.1
-attrs==19.1.0
+dateparser==0.7.2
+attrs==19.3.0
