--- a/tests/parsed_ingredients/ingredients1.yaml
+++ b/tests/parsed_ingredients/ingredients1.yaml
@@ -9,13 +9,13 @@ age:
     field: age
 date_between:
     kind: Metric
-    parsed_field: "if(birth_date between ['20 years ago', 'now'], age)"
-dt_between:
-    kind: Metric
-    field:
-        value: age
-        condition:
-            field: dt
-            between:
-            - 20 years ago
-            - now
+    field: "if(birth_date between ['20 years ago', 'now'], age)"
+#dt_between:
+#    kind: Metric
+#    field:
+#        value: age
+#        condition:
+#            field: dt
+#            between:
+#            - 20 years ago
+#            - now
