--- a/tests/parsed_ingredients/census_complex.yaml
+++ b/tests/parsed_ingredients/census_complex.yaml
@@ -1,3 +1,4 @@
+_version: "2"
 state:
     kind: Dimension
     field: state
@@ -17,4 +18,4 @@ pop2008:
     field: pop2008
 allthemath:
     kind: Metric
-    field: pop2000+pop2008   - pop2000 * pop2008 /pop2000
+    field: 'sum(pop2000+pop2008   - pop2000 * pop2008) /pop2000'
