--- a/tests/parsed_ingredients/ingredients1.yaml
+++ b/tests/parsed_ingredients/ingredients1.yaml
@@ -1,3 +1,4 @@
+_version: "2"
 first:
     kind: Dimension
     field: first
@@ -9,7 +10,8 @@ age:
     field: age
 date_between:
     kind: Metric
-    field: "if(birth_date between ['20 years ago', 'now'], age)"
+    field: 'if(birth_date between ("20 years ago", "now"), age)'
+
 #dt_between:
 #    kind: Metric
 #    field:
