Pass all the tests

--- a/tests/parsed_ingredients/census_complex.yaml
+++ b/tests/parsed_ingredients/census_complex.yaml
@@ -18,4 +18,4 @@ pop2008:
     field: pop2008
 allthemath:
     kind: Metric
-    field: 'sum(pop2000+pop2008   - pop2000 * pop2008) /pop2000'
+    field: 'sum(pop2000+pop2008   - pop2000 * pop2008 /pop2000)'
