--- a/tests/parsed_ingredients/census_bad_in.yaml
+++ b/tests/parsed_ingredients/census_bad_in.yaml
@@ -2,4 +2,4 @@ _version: "2"
 # A bad metric definition
 pop2000:
     kind: Metric
-    field: "if(age in cow=40,pop2000)"
+    field: "case(age in cow=40) {pop2000}"
