--- a/tests/parsed_ingredients/ingredients1.yaml
+++ b/tests/parsed_ingredients/ingredients1.yaml
@@ -10,7 +10,7 @@ age:
     field: age
 date_between:
     kind: Metric
-    field: 'if(birth_date between "20 years ago" and "now", age)'
+    field: 'case(birth_date between "20 years ago" and "now") {age}'
 dt_between:
     kind: Metric
-    field: 'if(birth_date between "20 years ago" and "now", age)'
+    field: 'case(birth_date between "20 years ago" and "now") {age}'
