--- a/tests/parsed_ingredients/ingredients1.yaml
+++ b/tests/parsed_ingredients/ingredients1.yaml
@@ -14,3 +14,6 @@ date_between:
 dt_between:
     kind: Metric
     field: 'if(birth_date between "20 years ago" and "now", age)'
+dt_is_year:
+    kind: Metric
+    field: 'if(birth_date is "year", age)'
