--- a/tests/ingredients/census_references.yaml
+++ b/tests/ingredients/census_references.yaml
@@ -14,6 +14,9 @@ pop2000:
 pop2008:
     kind: Metric
     field: pop2008
+badfield:
+    kind: Metric
+    field: unknown
 pop2008oldsters:
     kind: Metric
     field:
