Set default bucket_default_label to "Not found"
Having bucket_default_label = None causes
problems for projects using this library and
also results in the output of this dimension
being mixed types (some strings and some
None).

--- a/tests/ingredients/census.yaml
+++ b/tests/ingredients/census.yaml
@@ -24,6 +24,16 @@ age_buckets:
     - label: 'teens'
       lt: 20
     buckets_default_label: 'oldsters'
+age_buckets_nolabel:
+    kind: Dimension
+    field: age
+    buckets:
+    - label: 'babies'
+      lt: 2
+    - label: 'children'
+      lt: 13
+    - label: 'teens'
+      lt: 20
 mixed_buckets:
     kind: Dimension
     field: age
