Get rid of future import

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py36
+envlist = py36
 [testenv]
 deps = -rrequirements_dev.txt
 commands = py.test tests
