--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,13 @@
 -r requirements.txt
 appdirs==1.4.3
-bumpversion==0.5.3
+bump2version==1.0.1
 flake8==3.7.9
 packaging==19.2
 pytest==4.6.6
 pytest-cov==2.8.1
 twine==1.10.0
 mock==3.0.5
+freezegun
 psycopg2-binary
 sqlalchemy-redshift
 pybigquery
