--- a/tests/data/scores_with_nulls_table.yml
+++ b/tests/data/scores_with_nulls_table.yml
@@ -7,24 +7,24 @@
   department: ops
   testid: '2'
   score: 80.0
-  test_date: 2005-01-03
+  test_date: 2005-01-04
 - username: chip
   department: ops
   testid: '3'
   score: null
-  test_date: 2005-01-04
+  test_date: 2005-01-05
 - username: chip
   department: ops
   testid: '4'
   score: 100.0
-  test_date: 2005-02-05
+  test_date: 2005-01-07
 - username: annika
-  department: ops
+  department: null
   testid: '5'
   score: 80.0
-  test_date: 2005-02-06
+  test_date: 2005-02-01
 - username: annika
-  department: ops
+  department: null
   testid: '6'
   score: null
-  test_date: 2005-02-07
+  test_date: 2005-02-02
