Fix for compilation errors on bigquery timestamp columns

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -7,6 +7,6 @@ twine==3.4.2
 freezegun
 psycopg2-binary
 sqlalchemy-redshift
-pybigquery
-google-cloud-bigquery-storage
+sqlalchemy-bigquery
+google-api-core
 -e .
