Use dbinfo instead of oven

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
 				"ms-python.vscode-pylance",
 				"alexcvzz.vscode-sqlite",
 				"ms-python.black-formatter",
-				"ms-python.isort"
+				"ms-python.isort",
+				"GitHub.copilot"
 			]
 		}
 	}
