--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 faker==2.0.4
-SQLAlchemy>=1.4.0,<2.0
+SQLAlchemy>=2.0
 sqlparse==0.4.4
-stevedore==1.31.0
 tablib==3.4.0
 pyyaml>=5
 sureberus==0.15.0
