--- a/tests/shelf_config/census.yaml
+++ b/tests/shelf_config/census.yaml
@@ -1,60 +1,71 @@
 state:
-    kind: Dimension
-    field: state
+  kind: Dimension
+  field: state
 sex:
-    kind: Dimension
-    field: sex
+  kind: Dimension
+  field: sex
 age:
-    kind: Dimension
-    field: age
+  kind: Dimension
+  field: age
 pop2000:
-    kind: Measure
-    field: pop2000
+  kind: Measure
+  field: pop2000
 pop2008:
-    kind: Measure
-    field: pop2008
+  kind: Measure
+  field: pop2008
 baddim:
-    kind: Dimension
-    field: sex
-    # raw_field is a reserved key
-    raw_field: age
+  kind: Dimension
+  field: sex
+  # raw_field is a reserved key
+  raw_field: age
 age_buckets:
-    kind: Dimension
-    field: age
-    buckets:
-    - label: 'babies'
-      condition: '<2'
-    - label: 'children'
-      condition: '<13'
-    - label: 'teens'
-      condition: '<20'
-    buckets_default_label: 'oldsters'
+  kind: Dimension
+  field: age
+  buckets:
+    - label: "babies"
+      condition: "<2"
+    - label: "children"
+      condition: "<13"
+    - label: "teens"
+      condition: "<20"
+  buckets_default_label: "oldsters"
 age_buckets_nolabel:
-    kind: Dimension
-    field: age
-    buckets:
-    - label: 'babies'
-      condition: '<2'
-    - label: 'children'
-      condition: '<13'
-    - label: 'teens'
-      condition: '<20'
+  kind: Dimension
+  field: age
+  buckets:
+    - label: "babies"
+      condition: "<2"
+    - label: "children"
+      condition: "<13"
+    - label: "teens"
+      condition: "<20"
 mixed_buckets:
-    kind: Dimension
-    field: age
-    buckets:
-    - label: 'northeast'
+  kind: Dimension
+  field: age
+  buckets:
+    - label: "northeast"
       condition: 'state in ("Vermont", "New Hampshire")'
-    - label: 'babies'
-      condition: '<2'
-    - label: 'children'
-      condition: 'in (2,3,4,5,6,7,8,9,10,11,12)'
-    - label: 'teens'
-      condition: '<20'
-    buckets_default_label: 'oldsters'
+    - label: "babies"
+      condition: "<2"
+    - label: "children"
+      condition: "in (2,3,4,5,6,7,8,9,10,11,12)"
+    - label: "teens"
+      condition: "<20"
+  buckets_default_label: "oldsters"
 teenagers:
-    kind: Measure
-    field: "if(age between 13 and 19, pop2000)"
+  kind: Measure
+  field: "if(age between 13 and 19, pop2000)"
 ttlpop:
-    kind: Measure
-    field: pop2000 + pop2008
+  kind: Measure
+  field: pop2000 + pop2008
+filtergrouops:
+  kind: NamedFilters
+  named_filters:
+    - label: "northeast"
+      condition: 'state in ("Vermont", "New Hampshire")'
+    - label: "babies"
+      condition: "<2"
+    - label: "children"
+      condition: "age in (2,3,4,5,6,7,8,9,10,11,12)"
+    - label: "teens"
+      condition: "<20"
